src/objects/Shipper__c.object
<CustomObject>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>Company Name</label>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Text</type>
        <length>24</length>
    </fields>
    <fields>
        <fullName>ShipperID__c</fullName>
        <label>Shipper ID</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    <label>Shipper</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>{!label} Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shippers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>